# ai-code-review-poc

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  README.md  app.py  config.py  pyproject.toml
docs/: architecture.md
services/: ai_review_service.py  git_service.py  jira_service.py
